# cbars

./: .gitignore  CMakeLists.txt  README.md  cbars.h
.cache/clangd/index/: cbars.c.AD6B4A251F818735.idx  cbars.h.45950345F729C166.idx  color.c.F00DD83C9346B3E7.idx  simple.c.F3A0F15881668DBC.idx
examples/: color.c  colors_and_effects.c  complex.c  cool_bar.c  multiple.c  multiple_color.c  simple.c
include/cbars/: cbars.h
src/: cbars.c
